Arreglo bugs tablas y descripción eventos